- Use fmresultset XML grammer internally in getFromDB method of DB_FileMaker_FX class.
- The Date/Time functions are available in the expression of 'calculation' value.
- Add errorMessageStore(), isExistRequiredTable(), register(), unregister(), matchInRegisterd(), queryForTest(), 
  appendIntoRegisterd() and removeFromRegisterd() to DB_FileMaker_FX class experimentally.
- [INFO] FileMaker Server 10 has been deprecated. INTER-Mediator will require FileMaker Server 11 or later if using 
  FileMaker Server.
- [BUG FIX] DB_FileMaker_FX used the alternative data source not only the 'issuedhash' table also 'authuer' and some
  tables for authorization/authentication. Now, it uses just the 'issuedhash' table for the alternative data source.
- [BUG FIX] Calculation for strings didn't work, ex. >...
- [BUG FIX] The target description with "style.display" for the calculated field is working.
- [BUG FIX] The file upload component failed to update the related context.
- [BUG FIX] Fix outputting error messages in DB_PDO class correctly in some cases.
- [BUG FIX] Handle 'for' attribute of the 'label' element to enable editing a correct record using radio button when 
  displaying multiple records (Thanks to Kentaro Suzuki).
- [BUG FIX] Fix the FileMaker's checkbox set feature when using Internet Explorer 9 or 10 (Thanks to Kentaro Suzuki).
- [BUG FIX] Fix showing related fields not on the FileMaker's portal objects in some cases.
- [BUG FIX] Modify IMLibUI.valueChange method to fix compatibility with Internet Explorer (for handling readOnly 
  property).
- [BUG FIX] When a context should be removed, but it wasn't. A context is surely removed when nodes go away.

Ver.4.5 (2014/9/15)
- Sync with multiple clients in update/insert/delete with Pusher. (except for FileMaker's portal=>true context)
- The 'navi-control' key can be specified in a context. The value for it are 'master', 'detail' and 'master-hide'. See the Practice/navi.html.