@@ -14,6 +14,8 @@ Ver.4.6 (in development)
 - The Date/Time functions are available in the expression of 'calculation' value.
 - Add errorMessageStore(), isExistRequiredTable(), register(), unregister(), matchInRegisterd(), queryForTest(), 
   appendIntoRegisterd() and removeFromRegisterd() to DB_FileMaker_FX class experimentally.
+- Query conditions, sort fields, record number and updating context can be described in data-im attributes.
+  This feature realizes non-programming search page.
 - [INFO] FileMaker Server 10 has been deprecated. INTER-Mediator will require FileMaker Server 11 or later if using 
   FileMaker Server.
 - [BUG FIX] DB_FileMaker_FX used the alternative data source not only the 'issuedhash' table also 'authuer' and some
